

2011-08-19  Colomban Wendling  <colomban(at)geany(dot)org>

 * data/filetype_extensions.conf, data/filetypes.Cython.conf,
   data/filetypes.python:
   Add Cython filetype (patch by Matthew Brush, thanks).
 * src/symbols.c, tagmanager/include/tm_workspace.h,
   tagmanager/tm_workspace.c:
   Create temporary files used for generating global tags files in the
   system directory for temp files.


2011-08-15  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * doc/plugins.dox:
   Update API version used inside plugin howto to a more recent version
   (API v211).


2011-08-13  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/msgwindow.c, src/msgwindow.h, src/ui_utils.c, src/ui_utils.h:
   Focus the editor upon double click on the message and compiler
   windows (patch by Dimitar Zhekov, thanks).


2011-08-03  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/geany.h, plugins/classbuilder.c, plugins/export.c,
   plugins/filebrowser.c, plugins/htmlchars.c, plugins/saveactions.c,
   plugins/splitwindow.c:
   Only include config.h when building Geany (closes #3384026).


2011-07-31  Frank Lanitz  <frlan@frank.uvena.de>

 * doc/plugins.dox:
   Adding some content about PLUGIN_SET_TRANSLATABLE_INFO() into plugin
   HowTo as well as a hint to make usage of main_locale_init().


2011-07-28  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/build.c, src/build.h, src/editor.c, src/interface.c,
   src/keyfile.c, src/prefs.c, src/stash.c, src/stash.h,
   src/ui_utils.c, geany.glade, doc/geany.txt, doc/geany.html:
   Allow to edit formerly hidden preferences in the prefs dialog
   (closes #3313315, patch by Dimitar Zhekov and myself, thanks!).
 * src/document.c:
   Improve indentation width detection to better deal with Java
   and Vala files.


2011-06-26  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/highlighting.c:
   Recognize C# and Vala raw and verbatim strings as string styles.
 * src/editor.c:
   Fix indentation brace matching (closes #3309606).

